# pc_fp_align

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
molign/align/: __init__.py  cka.py
molign/datasets/: __init__.py  data_fetching.py  preprocess.py
molign/models/: __init__.py  architecture.py  lightning.py  metrics.py  ml_utils.py  simple_dataset.py
molign/utils/: utils.py
scripts/: paths.py  permutation_test.py  plot_exclusion_zone.py  plot_intuition.py  plot_performance.py  test_training.py
